increased test memory size + added increased max perm size (only increasing max memory didn't do the trick)
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1275 004c2c75-fc45-0410-b1a2-da8352e2331b